devops-poc/k8s/mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb
spec:
  type: NodePort
  ports:
    - port: 27017
      nodePort: 31003
  selector:
    app: mongodb
    tier: db
---
# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  labels:
    app: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      tier: db
  template:
    metadata:
      labels:
        app: mongodb
        tier: db
        selector: mongodb-statefulset
    spec:
      containers:
      - image: mongo:4.0.8
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: dev-volume1
          mountPath: /data/db
      volumes:
      - name: dev-volume1
        persistentVolumeClaim:
          claimName: mongodb-pv-claim
---
# StatelessSet
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mongodb-deployment
#   labels:
#     app: mongodb
# spec:
#   selector:
#     matchLabels:
#       app: mongodb
#       tier: db
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       labels:
#         app: mongodb
#         tier: db
#     spec:
#       containers:
#       - image: mongo:4.0.8
#         name: mongodb
#         env:
#         - name: MONGO_INITDB_ROOT_USERNAME
#           valueFrom:
#             secretKeyRef:
#               name: dev-secrets
#               key: mongodb-user      
#         - name: MONGO_INITDB_ROOT_PASSWORD
#           valueFrom:
#             secretKeyRef:
#               name: dev-secrets
#               key: mongodb-password
#         ports:
#         - containerPort: 27017
#           name: mongodb
#         volumeMounts:
#         - name: dev-volume1
#           mountPath: /data/db
#       volumes:
#       - name: dev-volume1
#         persistentVolumeClaim:
#           claimName: mongodb-pv-claim
