devops-poc/k8s/mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  type: NodePort
  ports:
    - port: 3306
      nodePort: 31001
  selector:
    app: mysql
    tier: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: db
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: dev-volume1
          mountPath: /var/lib/mysql
      volumes:
      - name: dev-volume1
        persistentVolumeClaim:
          claimName: mysql-pv-claim
