devops-poc/k8s/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  labels:
    app: postgresql
spec:
  type: NodePort
  ports:
    - port: 5432
      nodePort: 31002
  selector:
    app: postgresql
    tier: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-deployment
  labels:
    app: postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
      tier: db  
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql
        tier: db
    spec:
      containers:
        - image: postgres:9.6.2-alpine
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          volumeMounts:
            - name: postgresql
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgres-pv-claim
